@@ -38,6 +38,7 @@ Save only:
   - Title List (for listing game titles - used by CPS-2 readme and RAINE docs)
   - RomCenter Sublist
   - Game Launcher / GameEx Map File
+  - Hyperspin Database
 
 This package is a source only release and is only required if you want to
 compile any of my tools.
